// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Customizations 1`] = `
Array [
  <button
    className="btn my-custom-css-klass"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn blank"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btnBase"
    disabled={false}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Default 1`] = `
Array [
  <button
    className="btn"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn bordered"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn bordered rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn rounded raised"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn bordered circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn bordered block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Disabled All 1`] = `
Array [
  <button
    className="btn disabled"
    disabled={true}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary disabled"
    disabled={true}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary disabled"
    disabled={true}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary bordered disabled"
    disabled={true}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Groups All 1`] = `
Array [
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn raised"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn raised"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn raised"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn bordered"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn bordered"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn bordered"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn secondary"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn secondary"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn secondary"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn secondary raised"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn secondary raised"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn secondary raised"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn secondary bordered"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn secondary bordered"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn secondary bordered"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary raised"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary raised"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary raised"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary bordered"
      disabled={false}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary bordered"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary bordered"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      Three
    </button>
  </div>,
  <div
    ariaLabel="Appropriate label for your button group"
    className="group "
    role="group"
  >
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      One
    </button>
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      Two
    </button>
    <button
      className="btn primary disabled"
      disabled={true}
      type="button"
    >
      Three
    </button>
  </div>,
]
`;

exports[`Storyshots Button Icons Button Icons 1`] = `
Array [
  <div>
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="btn-icon"
        height="16"
        role="img"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <desc>
          Example icon graphic
        </desc>
        <path
          d="M9 12h2l-3 3-3-3h2V7h2v5zm3-8c0-.44-.91-3-4.5-3C5.08 1 3 2.92 3 5 1.02 5 0 6.52 0 8c0 1.53 1 3 3 3h3V9.7H3C1.38 9.7 1.3 8.28 1.3 8c0-.17.05-1.7 1.7-1.7h1.3V5c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V11h2c2.08 0 4-1.16 4-3.5C16 5.06 14.08 4 12 4z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
      Icon Left
    </button>
  </div>,
  <div
    style={
      Object {
        "marginTop": 16,
      }
    }
  >
    <button
      className="btn primary"
      disabled={false}
      type="button"
    >
      Icon Right
      <svg
        aria-hidden="true"
        className="btn-icon"
        height="16"
        role="img"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <desc>
          Example icon graphic
        </desc>
        <path
          d="M9 12h2l-3 3-3-3h2V7h2v5zm3-8c0-.44-.91-3-4.5-3C5.08 1 3 2.92 3 5 1.02 5 0 6.52 0 8c0 1.53 1 3 3 3h3V9.7H3C1.38 9.7 1.3 8.28 1.3 8c0-.17.05-1.7 1.7-1.7h1.3V5c0-1.39 1.56-2.7 3.2-2.7 2.55 0 3.13 1.55 3.2 1.8v1.2H12c.81 0 2.7.22 2.7 2.2 0 2.09-2.25 2.2-2.7 2.2h-2V11h2c2.08 0 4-1.16 4-3.5C16 5.06 14.08 4 12 4z"
          fill="currentColor"
          fillRule="evenodd"
        />
      </svg>
    </button>
  </div>,
]
`;

exports[`Storyshots Button Primary 1`] = `
Array [
  <button
    className="btn primary"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary bordered"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary bordered rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary rounded raised"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary bordered circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn primary bordered block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Secondary 1`] = `
Array [
  <button
    className="btn secondary"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary bordered"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary bordered rounded"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary rounded raised"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary bordered circle"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn secondary bordered block"
    disabled={false}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Sizes 1`] = `
Array [
  <button
    className="btn small"
    disabled={false}
    type="button"
  >
    Go
  </button>,
  <button
    className="btn large"
    disabled={false}
    type="button"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Button Types 1`] = `
Array [
  <button
    className="btn"
    disabled={false}
    type="reset"
  >
    Go
  </button>,
  <button
    className="btn"
    disabled={false}
    type="submit"
  >
    Go
  </button>,
]
`;

exports[`Storyshots Card All 1`] = `
Array [
  <div
    className="card"
  >
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Default
    </div>
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Card
    </div>
  </div>,
  <div
    className="card cardStacked"
  >
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Stacked
    </div>
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Card
    </div>
  </div>,
  <div
    className="cardBase"
  >
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Base Card
    </div>
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      No Skin
    </div>
  </div>,
  <div
    className="card foo-bar"
  >
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Custom CSS Class
    </div>
    <div
      style={
        Object {
          "padding": 24,
        }
      }
    >
      Inspect to see foo-bar
    </div>
  </div>,
]
`;

exports[`Storyshots Grid Usage Examples 1`] = `
Array [
  <section>
    <h1>
      FlexGrid
    </h1>
    <p>
      <i>
        xs
      </i>
       = Extra Small.
      <i>
        sm
      </i>
       = Small.
      <i>
        md
      </i>
       = Medium.
      <i>
        lg
      </i>
       = Large.
      <i>
        xl
      </i>
       = Extra Large.
    </p>
    <div
      className="flexgrid-container"
    >
      <div
        className="DemoCol row"
      >
        <div
          className="col-xs-12 col-sm-4 col-lg-6"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={6}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-lg-6"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={6}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-lg-3"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={3}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-lg-3"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={3}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-lg-3"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={3}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-4 col-lg-3"
        >
          <p
            className="Field"
          >
            xs={12} sm={4} lg={3}
          </p>
        </div>
      </div>
    </div>
  </section>,
  <section>
    <h1>
      Complex
    </h1>
    <p>
      Not that you'd want this level of complexity, but it is available:
    </p>
    <div
      className="flexgrid-container"
    >
      <div
        className="DemoCol row"
      >
        <div
          className="col-xs-12 col-sm-8 col-md-4 col-lg-3 col-xl-2"
        >
          <p
            className="Field"
          >
            xs={12} sm={8} md={4} lg={3} xl={2}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-8 col-md-4 col-lg-3 col-xl-2"
        >
          <p
            className="Field"
          >
            xs={12} sm={8} md={4} lg={3} xl={2}
          </p>
        </div>
        <div
          className="col-xs-12 col-sm-8 col-md-4 col-lg-3 col-xl-2"
        >
          <p
            className="Field"
          >
            xs={12} sm={8} md={4} lg={3} xl={2}
          </p>
        </div>
      </div>
    </div>
  </section>,
  <section>
    <h1>
      Offsets
    </h1>
    <div
      className="flexgrid-container"
    >
      <div
        className="DemoCol row"
      >
        <div
          className="col-sm-2"
          style={
            Object {
              "border": "1px solid #f7cac9",
            }
          }
        >
          <p>
            sm=
            2
          </p>
        </div>
        <div
          className="col-sm-2 col-sm-offset-1"
          style={
            Object {
              "border": "1px solid #39cccc",
            }
          }
        >
          <p>
            sm=
            2
             smOffset=
            1
          </p>
        </div>
        <div
          className="col-sm-2 col-sm-offset-1"
          style={
            Object {
              "border": "1px solid #7fdbff",
            }
          }
        >
          <p>
            sm=
            2
             smOffset=
            1
          </p>
        </div>
        <div
          className="col-sm-2 col-sm-offset-1"
          style={
            Object {
              "border": "1px solid #ff6f61",
            }
          }
        >
          <p>
            sm=
            2
             smOffset=
            1
          </p>
        </div>
      </div>
    </div>
    <p>
      See 
      <a
        href="https://evgenyrodionov.github.io/flexboxgrid2/"
      >
        flexboxgrid2
      </a>
       for more examples.
    </p>
  </section>,
]
`;

exports[`Storyshots Header Header And Nav 1`] = `
Array [
  <header
    className="header custom-global-css-class"
  >
    <div
      className="headerContent"
    >
      <div
        style={
          Object {
            "padding": 24,
          }
        }
      >
        LOGO
      </div>
      <nav>
        <ul
          className="headerNav"
        >
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              Home
            </a>
          </li>
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              Services
            </a>
          </li>
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              About
            </a>
          </li>
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              Contact
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>,
  <header
    className="headerBase"
  >
    <div
      className="headerContent"
    >
      <div
        style={
          Object {
            "padding": 24,
          }
        }
      >
        NO-Skinz
      </div>
      <nav>
        <ul
          className="headerNav"
        >
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              Not Skinned
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>,
  <header
    className="header sticky"
  >
    <div
      className="headerContent"
    >
      <div
        style={
          Object {
            "padding": 24,
          }
        }
      >
        Logo
      </div>
      <nav>
        <ul
          className="headerNav"
        >
          <li
            className="headerNavItem"
          >
            <a
              href="#"
              style={
                Object {
                  "color": "#333333",
                  "textDecoration": "none",
                }
              }
            >
              Sticky
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </header>,
]
`;

exports[`Storyshots Input All Inputs 1`] = `
Array [
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId"
    >
      Default input
    </label>
    <input
      className="input"
      defaultValue=""
      disabled={false}
      id="myUniqueId"
      name="myUniqueId"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId2"
    >
      Rounded input
    </label>
    <input
      className="input rounded"
      defaultValue=""
      disabled={false}
      id="myUniqueId2"
      name="myUniqueId2"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId3"
    >
      Underlined input
    </label>
    <input
      className="input underlined"
      defaultValue=""
      disabled={false}
      id="myUniqueId3"
      name="myUniqueId3"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId4"
    >
      Underlined with background input
    </label>
    <input
      className="input underlined underlinedWithBackground"
      defaultValue=""
      disabled={false}
      id="myUniqueId4"
      name="myUniqueId4"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label labelLarge"
      htmlFor="myUniqueId5"
    >
      Large input
    </label>
    <input
      className="input inputLarge"
      defaultValue=""
      disabled={false}
      id="myUniqueId5"
      name="myUniqueId5"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label labelSmall"
      htmlFor="myUniqueId6"
    >
      Small input
    </label>
    <input
      className="input inputSmall"
      defaultValue=""
      disabled={false}
      id="myUniqueId6"
      name="myUniqueId6"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId7"
    >
      Disabled
    </label>
    <input
      className="input disabled"
      defaultValue=""
      disabled={true}
      id="myUniqueId7"
      name="myUniqueId7"
      type="text"
    />
  </div>,
]
`;

exports[`Storyshots Input Error And Help Text 1`] = `
Array [
  <div
    className="width-full"
  >
    <label
      className="label"
      htmlFor="myUniqueId"
    >
      Help text input
    </label>
    <input
      className="input"
      defaultValue=""
      disabled={false}
      id="myUniqueId"
      name="myUniqueId"
      type="text"
    />
    <span
      className="fieldHelp"
    >
      Some useful help text.
    </span>
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label labelError"
      htmlFor="myUniqueId2"
    >
      Invalid input
    </label>
    <input
      className="input invalid"
      defaultValue=""
      disabled={false}
      id="myUniqueId2"
      name="myUniqueId2"
      type="text"
    />
    <span
      className="fieldError"
    >
      This field has errors.
    </span>
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label labelError labelSmall"
      htmlFor="myUniqueId3"
    >
      Invalid small input
    </label>
    <input
      className="input invalid inputSmall"
      defaultValue=""
      disabled={false}
      id="myUniqueId3"
      name="myUniqueId3"
      type="text"
    />
    <span
      className="fieldErrorSmall"
    >
      This field has errors.
    </span>
  </div>,
  <div
    className="width-full"
  >
    <label
      className="label labelError labelLarge"
      htmlFor="myUniqueId4"
    >
      Invalid large input
    </label>
    <input
      className="input invalid inputLarge"
      defaultValue=""
      disabled={false}
      id="myUniqueId4"
      name="myUniqueId4"
      type="text"
    />
    <span
      className="fieldErrorLarge"
    >
      This field has errors.
    </span>
  </div>,
]
`;

exports[`Storyshots Progress All 1`] = `
Array [
  <progress
    className="progressBar"
    max={100}
    value={30}
  />,
  <progress
    className="progressBar foo-bar"
    max={100}
    value={30}
  />,
  <progress
    className="progressBar foo-bar"
    max={100}
    value={0}
  />,
  <progress
    className="progressBar foo-bar"
    max={100}
    value={100}
  />,
]
`;
